--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -7,3 +7,4 @@
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
